ch_1.txt
#Ouput from exercises in Ch1

Python 3.6.1 |Anaconda 4.4.0 (64-bit)| (default, May 11 2017, 13:09:58)
[GCC 4.4.7 20120313 (Red Hat 4.4.7-1)] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> 1+1
2
>>> print("Hello World")
Hello World
>>> print('Hello World')
Hello World
>>> print('Hello World)
  File "<stdin>", line 1
    print('Hello World)
                      ^
SyntaxError: EOL while scanning string literal
>>> print('Hello World'
...
... )
Hello World
>>> print'Hello World')
  File "<stdin>", line 1
    print'Hello World')
                     ^
SyntaxError: invalid syntax
>>> print 'Hello World')
  File "<stdin>", line 1
    print 'Hello World')
                      ^
SyntaxError: Missing parentheses in call to 'print'
>>> -2
-2
>>> +2
2
>>> 2++2
4
>>> 02
  File "<stdin>", line 1
    02
     ^
SyntaxError: invalid token
>>> 002
  File "<stdin>", line 1
    002
      ^
SyntaxError: invalid token
>>> 2 3
  File "<stdin>", line 1
    2 3
      ^
SyntaxError: invalid syntax
>>> (42 * 60) + 42
2562
>>> 10/1.61
6.211180124223602
>>> (((42*60)+42)/(10/1.61))
412.482
>>> 412.482/60
6.874700000000001
>>> 60*.8747
52.482
>>> 412.482%60
52.48200000000003
>>>
